--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,11 +1,35 @@
-<nav class="nav">
-  <div class="container">
+<nav class="nav" role="navigation">
+  <div class="container wide">
     <div class="nav-items">
-      <a class="nav-item name" href="/">Tara Vancil</a>
-      <a class="nav-item" href="/about/">About</a>
-      <a class="nav-item" href="/#projects">Projects</a>
-      <a class="nav-item" href="/blog/">Blog</a>
-      <a class="nav-item" href="/bookshelf/">Bookshelf</a>
+      <a href="/" class="nav-item nav-item-home-link  undecorated-link">
+        <span class="avatar small-avatar" aria-hidden="true">:-)</span>
+        Tara Vancil
+      </a>
+
+      <a class="nav-item undecorated-link" href="/about/">
+        About
+      </a>
+
+      <a class="nav-item undecorated-link" href="/blog/">
+        Blog
+      </a>
+
+      <!-- <a class="nav-item undecorated-link" href="/blog/">
+        My feed
+      </a>
+ -->
+      <a class="nav-item undecorated-link" href="/projects/">
+        Projects
+      </a>
+
+      <a class="nav-item nav-item-email-link with-icon undecorated-link flex-child--right" href="mailto:contact@taravancil.com">
+        <!-- <span class="icon-container"> -->
+        <!-- <span aria-hidden="true" class="icon envelope">&#9993;</span> -->
+        <!-- <span class="icon-label">Email</span> -->
+        <!-- </span> -->
+
+        <span class="label">contact@taravancil.com</span>
+      </a>
     </div>
   </div>
 </nav>
