--- a/src/scss/layout/all.scss
+++ b/src/scss/layout/all.scss
@@ -1,5 +1,10 @@
 @import 'containers';
+@import 'columns';
 @import 'grid';
 @import 'nav';
 @import 'main';
 @import 'footer';
+
+.flex-child--right {
+  margin-left: auto;
+}
