--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,18 +1,19 @@
 <!doctype html>
-<html>
-  {{ partial "head.html" . }}
+<html lang="en">
+{{ partial "head.html" . }}
 
-  <body class="about post">
-    {{ partial "breadcrumbs.html" . }}
+<body class="about post">
+  {{ partial "breadcrumbs.html" . }}
 
-    <div class="container narrow">
-      <main role="main">
-        <h1>{{ .Title }}</h1>
-        <div class="content">
-          {{ .Content }}
-        </div>
-      </main>
-    </div>
-    {{ partial "footer.html" . }}
-  </body>
+  <div class="container narrow">
+    <main role="main">
+      <h1>{{ .Title }}</h1>
+      <div class="content">
+        {{ .Content }}
+      </div>
+    </main>
+  </div>
+  {{ partial "footer.html" }}
+</body>
+
 </html>
