--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -1,32 +1,34 @@
 <!doctype html>
 <html lang="en">
-  {{ partial "head.html" . }}
-  <body class="project">
-    {{ partial "breadcrumbs.html" . }}
+{{ partial "head.html" . }}
 
-    <div class="container medium">
-      <main class="main">
-        <h1 class="title">{{ .Title }}</h1>
-        <p>{{ .Description | markdownify }}</p>
+<body class="project">
+  {{ partial "breadcrumbs.html" . }}
 
-        <h2 class="inline-heading">Links</h2>
-        <ul>
-          <li>
-            <a href="{{ .Params.link }}">{{ .Params.link }}</a>
-          </li>
-          <li>
-            <a href="{{ .Params.srcLink }}">{{ .Params.srcLink }}</a>
-          </li>
-        </ul>
+  <div class="container medium">
+    <main class="main">
+      <h1 class="title">{{ .Title }}</h1>
+      <p>{{ .Description | markdownify }}</p>
 
-        <div class="project-screenshots grid">
-          {{ range .Params.screenshots }}
-            <img class="project-screenshot" src="{{ . }}">
-          {{ end }}
-        </div>
-      </main>
-    </div>
+      <h2 class="inline-heading">Links</h2>
+      <ul>
+        <li>
+          <a href="{{ .Params.link }}">{{ .Params.link }}</a>
+        </li>
+        <li>
+          <a href="{{ .Params.srcLink }}">{{ .Params.srcLink }}</a>
+        </li>
+      </ul>
 
-    {{ partial "footer.html" (dict "size" "medium") }}
-  </body>
+      <div class="project-screenshots grid">
+        {{ range .Params.screenshots }}
+        <img class="project-screenshot" src="{{ . }}">
+        {{ end }}
+      </div>
+    </main>
+  </div>
+
+  {{ partial "footer.html" }}
+</body>
+
 </html>
