--- a/layouts/section/tags.html
+++ b/layouts/section/tags.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html>
-  {{ partial "head.html" . }}
+{{ partial "head.html" . }}
 
-  <body class="tags">
-    {{ partial "nav.html" }}
-    <div class="container">
-      <main>
-	      <h1>Tags</h1>
-	      <ul class="posts-list">
-          {{ range $name, $taxonomy := .Site.taxonomies.tags }}
-          <li>{{ $name }}tag</li>
-	        {{ end }}
-	      </ul>
-      </main>
-    </div>
-    {{ partial "footer.html" . }}
-  </body>
+<body class="tags">
+  <div class="container medium">
+    <main role="main">
+      <h1>Tags</h1>
+      <ul class="posts-list">
+        {{ range $name, $taxonomy := .Site.taxonomies.tags }}
+        <li>{{ $name }}tag</li>
+        {{ end }}
+      </ul>
+    </main>
+  </div>
+  {{ partial "footer.html" }}
+</body>
+
 </html>
