--- a/layouts/taxonomy/tag.html
+++ b/layouts/taxonomy/tag.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html>
-  {{ partial "head.html" . }}
+{{ partial "head.html" . }}
 
-  <body>
-    {{ partial "nav.html" }}
-    <div class="container">
-      <main>
-	      <h1>Tags &raquo {{ .Title }}</h1>
-	      <ul class="posts-list">
-          {{ range .Data.Pages }}
-           {{ .Render "li" }}
-	        {{ end }}
-	      </ul>
-      </main>
-    </div>
-    {{ partial "footer.html" . }}
-  </body>
+<body>
+  <div class="container medium">
+    <main role="main">
+      <h1>Tags &raquo {{ .Title }}</h1>
+      <ul class="posts-list">
+        {{ range .Data.Pages }}
+        {{ .Render "li" }}
+        {{ end }}
+      </ul>
+    </main>
+  </div>
+  {{ partial "footer.html" }}
+</body>
+
 </html>
